; ModuleID = '/home/carl/AnghaBench/tig/src/extr_stash.c_stash_select.c'
source_filename = "/home/carl/AnghaBench/tig/src/extr_stash.c_stash_select.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.view = type { %struct.TYPE_2__*, i32 }
%struct.TYPE_2__ = type { i32 }
%struct.line = type { i64 }

@.str = private unnamed_addr constant [11 x i8] c"stash@{%d}\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.view*, %struct.line*)* @stash_select to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @stash_select(%struct.view* %0, %struct.line* %1) #0 {
  %3 = alloca %struct.view*, align 8
  %4 = alloca %struct.line*, align 8
  store %struct.view* %0, %struct.view** %3, align 8
  store %struct.line* %1, %struct.line** %4, align 8
  %5 = load %struct.view*, %struct.view** %3, align 8
  %6 = load %struct.line*, %struct.line** %4, align 8
  %7 = call i32 @main_select(%struct.view* %5, %struct.line* %6)
  %8 = load %struct.view*, %struct.view** %3, align 8
  %9 = getelementptr inbounds %struct.view, %struct.view* %8, i32 0, i32 0
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.line*, %struct.line** %4, align 8
  %14 = getelementptr inbounds %struct.line, %struct.line* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = sub nsw i64 %15, 1
  %17 = call i32 @string_format(i32 %12, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i64 %16)
  %18 = load %struct.view*, %struct.view** %3, align 8
  %19 = getelementptr inbounds %struct.view, %struct.view* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 8
  %21 = load %struct.view*, %struct.view** %3, align 8
  %22 = getelementptr inbounds %struct.view, %struct.view* %21, i32 0, i32 0
  %23 = load %struct.TYPE_2__*, %struct.TYPE_2__** %22, align 8
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = call i32 @string_copy(i32 %20, i32 %25)
  ret void
}

declare dso_local i32 @main_select(%struct.view*, %struct.line*) #1

declare dso_local i32 @string_format(i32, i8*, i64) #1

declare dso_local i32 @string_copy(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
